<resources>
    <string name="app_name">CinemaApp</string>
    <string name="tab_text_movies">Movies</string>
    <string name="tab_text_location">Location</string>
    <string name="tab_text_about_us">About us</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="button_dungannon">Dungannon</string>
    <string name="button_omagh">Omagh</string>
    <string name="button_enniskillen">Enniskillen</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_test_tabbed">TestTabbedActivity</string>
    <string name="title_activity_tabbed_cinema">TabbedCinemaActivity</string>
    <string name="title_activity_dugannonmaps">Map</string>
    <string name="title_avengers"> Avengers Endgame</string>
    <string name="title_activity_hq_maps">Map</string>
</resources>
