<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="1080px"
                android:layout_height="500px"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/logcinema1" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="1080px"
                android:layout_height="250px"
                android:text="Hello and welcome to Carleton Cinemas! We hope you enjoy our newly developed app, built with you in mind! Please select from the options below to continue."
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="?android:attr/listDivider" />

            <Button
                android:id="@+id/button_dungannon"
                android:layout_width="1080px"
                android:layout_height="200px"
                android:backgroundTint="#B60909"
                android:text="@string/button_dungannon"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_omagh"
                android:layout_width="1080px"
                android:layout_height="200px"
                android:backgroundTint="#B60909"
                android:text="@string/button_omagh"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_enniskillen"
                android:layout_width="1080px"
                android:layout_height="200px"
                android:backgroundTint="#B60909"
                android:text="@string/button_enniskillen"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_gallery"
                android:layout_width="1080px"
                android:layout_height="200px"
                android:backgroundTint="#B60909"
                android:text="@string/menu_gallery"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_location"
                android:layout_width="1080px"
                android:layout_height="200px"
                android:backgroundTint="#B60909"
                android:text="@string/tab_text_location"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>